--- a/hair-shop/index.html
+++ b/hair-shop/index.html
@@ -47,13 +47,6 @@
             </div>
         </div>
 
-        <div class="name-tovar">
-            <div class="ots"><h5 class="opacity-one">jACKETS</h5></div>
-            <div class="ots"><h5 class="opacity-two">jACKETS</h5></div>
-            <div class="ots"><h5 class="opacity-three">jACKETS</h5></div>
-            <div class="ots"><h5 class="opacity-thour">jACKETS</h5></div>
-        </div>
-
         <div class="block-clothings-and-sales">
             <div class="block-clothing">
 
@@ -118,6 +111,86 @@
                             <img src="assets/musor.png" style="cursor: pointer;">
                         </div>
                     </div>
+                    <div class="block-input-buy" style="margin-bottom: 20px;">
+                        <div class="name-buy-product">
+                            <h5 class="number-clothing">HAIR #1</h5>
+                        </div>
+                        <div class="summ-buy-product right">
+                            <div class="sum-product">
+                                <div style="font-weight: 900; margin-right: 5px;">$</div>
+                                <div style="color: #FF4646; font-weight:900;">
+                                 5 000 000
+                                </div>
+                             </div>
+                        </div>
+                        <div class="delete-buy-product right">
+                            <img src="assets/musor.png" style="cursor: pointer;">
+                        </div>
+                    </div>
+                    <div class="block-input-buy" style="margin-bottom: 20px;">
+                        <div class="name-buy-product">
+                            <h5 class="number-clothing">HAIR #1</h5>
+                        </div>
+                        <div class="summ-buy-product right">
+                            <div class="sum-product">
+                                <div style="font-weight: 900; margin-right: 5px;">$</div>
+                                <div style="color: #FF4646; font-weight:900;">
+                                 5 000 000
+                                </div>
+                             </div>
+                        </div>
+                        <div class="delete-buy-product right">
+                            <img src="assets/musor.png" style="cursor: pointer;">
+                        </div>
+                    </div>
+                    <div class="block-input-buy" style="margin-bottom: 20px;">
+                        <div class="name-buy-product">
+                            <h5 class="number-clothing">HAIR #1</h5>
+                        </div>
+                        <div class="summ-buy-product right">
+                            <div class="sum-product">
+                                <div style="font-weight: 900; margin-right: 5px;">$</div>
+                                <div style="color: #FF4646; font-weight:900;">
+                                 5 000 000
+                                </div>
+                             </div>
+                        </div>
+                        <div class="delete-buy-product right">
+                            <img src="assets/musor.png" style="cursor: pointer;">
+                        </div>
+                    </div>
+                    <div class="block-input-buy" style="margin-bottom: 20px;">
+                        <div class="name-buy-product">
+                            <h5 class="number-clothing">HAIR #1</h5>
+                        </div>
+                        <div class="summ-buy-product right">
+                            <div class="sum-product">
+                                <div style="font-weight: 900; margin-right: 5px;">$</div>
+                                <div style="color: #FF4646; font-weight:900;">
+                                 5 000 000
+                                </div>
+                             </div>
+                        </div>
+                        <div class="delete-buy-product right">
+                            <img src="assets/musor.png" style="cursor: pointer;">
+                        </div>
+                    </div>
+                    <div class="block-input-buy" style="margin-bottom: 20px;">
+                        <div class="name-buy-product">
+                            <h5 class="number-clothing">HAIR #1</h5>
+                        </div>
+                        <div class="summ-buy-product right">
+                            <div class="sum-product">
+                                <div style="font-weight: 900; margin-right: 5px;">$</div>
+                                <div style="color: #FF4646; font-weight:900;">
+                                 5 000 000
+                                </div>
+                             </div>
+                        </div>
+                        <div class="delete-buy-product right">
+                            <img src="assets/musor.png" style="cursor: pointer;">
+                        </div>
+                    </div>
                     
                 </div><!-- ===== НЕ УДАЛЯТЬ =======-->
 
@@ -135,6 +208,17 @@
                              5 000 000
                             </div>
                          </div>
+                    </div>
+                    <div class="method">
+                        <div class="name-method">METHOD</div>
+                        <div class="flex-block-method">
+                            <div class="block-dollar">
+                                <img src="assets/$.png" style="margin-top: 12px;">
+                            </div>
+                            <div class="block-bank">
+                                <img src="assets/bank.png" style="margin-top: 12px;">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
