--- a/tato-shop/index.html
+++ b/tato-shop/index.html
@@ -96,6 +96,106 @@
                         </div>
                     </div>
                 </div>
+                <div class="clothing">
+                    <div class="active-button"></div>
+                    <div class="name-clothing">
+                        <h5 class="number-clothing">TATTO #1</h5><h6 class="color-clothing">NAME</h6>
+                    </div>
+                    <div class="block-img-kurt">
+                        <img src="assets/hand.png" class="jacket">
+                    </div>
+                    <div class="summ-clothing">
+                        <div class="sum">
+                           <div style="font-weight: 900; margin-right: 5px;">$</div>
+                           <div style="color: #FF4646; font-weight:900;">
+                            5 000 000
+                           </div>
+                        </div>
+                        <div class="button-buy">
+                            <img src="assets/korzina-two.png" style="margin-top:6px;">
+                        </div>
+                    </div>
+                </div>
+                <div class="clothing">
+                    <div class="active-button"></div>
+                    <div class="name-clothing">
+                        <h5 class="number-clothing">TATTO #1</h5><h6 class="color-clothing">NAME</h6>
+                    </div>
+                    <div class="block-img-kurt">
+                        <img src="assets/hand.png" class="jacket">
+                    </div>
+                    <div class="summ-clothing">
+                        <div class="sum">
+                           <div style="font-weight: 900; margin-right: 5px;">$</div>
+                           <div style="color: #FF4646; font-weight:900;">
+                            5 000 000
+                           </div>
+                        </div>
+                        <div class="button-buy">
+                            <img src="assets/korzina-two.png" style="margin-top:6px;">
+                        </div>
+                    </div>
+                </div>
+                <div class="clothing">
+                    <div class="active-button"></div>
+                    <div class="name-clothing">
+                        <h5 class="number-clothing">TATTO #1</h5><h6 class="color-clothing">NAME</h6>
+                    </div>
+                    <div class="block-img-kurt">
+                        <img src="assets/hand.png" class="jacket">
+                    </div>
+                    <div class="summ-clothing">
+                        <div class="sum">
+                           <div style="font-weight: 900; margin-right: 5px;">$</div>
+                           <div style="color: #FF4646; font-weight:900;">
+                            5 000 000
+                           </div>
+                        </div>
+                        <div class="button-buy">
+                            <img src="assets/korzina-two.png" style="margin-top:6px;">
+                        </div>
+                    </div>
+                </div>
+                <div class="clothing">
+                    <div class="active-button"></div>
+                    <div class="name-clothing">
+                        <h5 class="number-clothing">TATTO #1</h5><h6 class="color-clothing">NAME</h6>
+                    </div>
+                    <div class="block-img-kurt">
+                        <img src="assets/hand.png" class="jacket">
+                    </div>
+                    <div class="summ-clothing">
+                        <div class="sum">
+                           <div style="font-weight: 900; margin-right: 5px;">$</div>
+                           <div style="color: #FF4646; font-weight:900;">
+                            5 000 000
+                           </div>
+                        </div>
+                        <div class="button-buy">
+                            <img src="assets/korzina-two.png" style="margin-top:6px;">
+                        </div>
+                    </div>
+                </div>
+                <div class="clothing">
+                    <div class="active-button"></div>
+                    <div class="name-clothing">
+                        <h5 class="number-clothing">TATTO #1</h5><h6 class="color-clothing">NAME</h6>
+                    </div>
+                    <div class="block-img-kurt">
+                        <img src="assets/hand.png" class="jacket">
+                    </div>
+                    <div class="summ-clothing">
+                        <div class="sum">
+                           <div style="font-weight: 900; margin-right: 5px;">$</div>
+                           <div style="color: #FF4646; font-weight:900;">
+                            5 000 000
+                           </div>
+                        </div>
+                        <div class="button-buy">
+                            <img src="assets/korzina-two.png" style="margin-top:6px;">
+                        </div>
+                    </div>
+                </div>
                 
             </div>
 
