--- a/markets/index.html
+++ b/markets/index.html
@@ -48,30 +48,158 @@
         </div>
 
         <div class="block-clothings-and-sales">
-            <div class="block-clothing">
 
+            <div class="flex-block-left-category">
                 <div class="block-category-eat">
                     <div class="category-eat"></div>
                     <div class="category-eat"></div>
+                    <div class="category-eat"></div>
+                    <div class="category-eat"></div>
+                    <div class="category-eat"></div>
+                    <div class="category-eat"></div>
                 </div>
+                <div class="block-clothing">
 
-                <div class="clothing">
-                    <div class="active-button"></div>
-                    <div class="name-clothing">
-                        <h5 class="number-clothing">EAT #1</h5><h6 class="color-clothing">NAME</h6>
-                    </div>
-                    <div class="block-img-kurt">
-                        <img src="assets/meat-5058784-4222035 1.png" class="jacket">
-                    </div>
-                    <div class="summ-clothing">
-                        <div class="sum">
-                           <div style="font-weight: 900; margin-right: 5px;">$</div>
-                           <div style="color: #FF4646; font-weight:900;">
-                            5 000 000
-                           </div>
+                    <div class="flex-block-meet">
+                        <div class="clothing">
+                            <div class="active-button"></div>
+                            <div class="name-clothing">
+                                <h5 class="number-clothing">EAT #1</h5><h6 class="color-clothing">NAME</h6>
+                            </div>
+                            <div class="block-img-kurt">
+                                <img src="assets/meat-5058784-4222035 1.png" class="jacket">
+                            </div>
+                            <div class="summ-clothing">
+                                <div class="sum">
+                                <div style="font-weight: 900; margin-right: 5px;">$</div>
+                                <div style="color: #FF4646; font-weight:900;">
+                                    5 000 000
+                                </div>
+                                </div>
+                                <div class="button-buy">
+                                    <img src="assets/korzina-two.png" style="margin-top:6px;">
+                                </div>
+                            </div>
                         </div>
-                        <div class="button-buy">
-                            <img src="assets/korzina-two.png" style="margin-top:6px;">
+                        <div class="clothing">
+                            <div class="active-button"></div>
+                            <div class="name-clothing">
+                                <h5 class="number-clothing">EAT #1</h5><h6 class="color-clothing">NAME</h6>
+                            </div>
+                            <div class="block-img-kurt">
+                                <img src="assets/meat-5058784-4222035 1.png" class="jacket">
+                            </div>
+                            <div class="summ-clothing">
+                                <div class="sum">
+                                <div style="font-weight: 900; margin-right: 5px;">$</div>
+                                <div style="color: #FF4646; font-weight:900;">
+                                    5 000 000
+                                </div>
+                                </div>
+                                <div class="button-buy">
+                                    <img src="assets/korzina-two.png" style="margin-top:6px;">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="clothing">
+                            <div class="active-button"></div>
+                            <div class="name-clothing">
+                                <h5 class="number-clothing">EAT #1</h5><h6 class="color-clothing">NAME</h6>
+                            </div>
+                            <div class="block-img-kurt">
+                                <img src="assets/meat-5058784-4222035 1.png" class="jacket">
+                            </div>
+                            <div class="summ-clothing">
+                                <div class="sum">
+                                <div style="font-weight: 900; margin-right: 5px;">$</div>
+                                <div style="color: #FF4646; font-weight:900;">
+                                    5 000 000
+                                </div>
+                                </div>
+                                <div class="button-buy">
+                                    <img src="assets/korzina-two.png" style="margin-top:6px;">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="clothing">
+                            <div class="active-button"></div>
+                            <div class="name-clothing">
+                                <h5 class="number-clothing">EAT #1</h5><h6 class="color-clothing">NAME</h6>
+                            </div>
+                            <div class="block-img-kurt">
+                                <img src="assets/meat-5058784-4222035 1.png" class="jacket">
+                            </div>
+                            <div class="summ-clothing">
+                                <div class="sum">
+                                <div style="font-weight: 900; margin-right: 5px;">$</div>
+                                <div style="color: #FF4646; font-weight:900;">
+                                    5 000 000
+                                </div>
+                                </div>
+                                <div class="button-buy">
+                                    <img src="assets/korzina-two.png" style="margin-top:6px;">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="clothing">
+                            <div class="active-button"></div>
+                            <div class="name-clothing">
+                                <h5 class="number-clothing">EAT #1</h5><h6 class="color-clothing">NAME</h6>
+                            </div>
+                            <div class="block-img-kurt">
+                                <img src="assets/meat-5058784-4222035 1.png" class="jacket">
+                            </div>
+                            <div class="summ-clothing">
+                                <div class="sum">
+                                <div style="font-weight: 900; margin-right: 5px;">$</div>
+                                <div style="color: #FF4646; font-weight:900;">
+                                    5 000 000
+                                </div>
+                                </div>
+                                <div class="button-buy">
+                                    <img src="assets/korzina-two.png" style="margin-top:6px;">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="clothing">
+                            <div class="active-button"></div>
+                            <div class="name-clothing">
+                                <h5 class="number-clothing">EAT #1</h5><h6 class="color-clothing">NAME</h6>
+                            </div>
+                            <div class="block-img-kurt">
+                                <img src="assets/meat-5058784-4222035 1.png" class="jacket">
+                            </div>
+                            <div class="summ-clothing">
+                                <div class="sum">
+                                <div style="font-weight: 900; margin-right: 5px;">$</div>
+                                <div style="color: #FF4646; font-weight:900;">
+                                    5 000 000
+                                </div>
+                                </div>
+                                <div class="button-buy">
+                                    <img src="assets/korzina-two.png" style="margin-top:6px;">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="clothing">
+                            <div class="active-button"></div>
+                            <div class="name-clothing">
+                                <h5 class="number-clothing">EAT #1</h5><h6 class="color-clothing">NAME</h6>
+                            </div>
+                            <div class="block-img-kurt">
+                                <img src="assets/meat-5058784-4222035 1.png" class="jacket">
+                            </div>
+                            <div class="summ-clothing">
+                                <div class="sum">
+                                <div style="font-weight: 900; margin-right: 5px;">$</div>
+                                <div style="color: #FF4646; font-weight:900;">
+                                    5 000 000
+                                </div>
+                                </div>
+                                <div class="button-buy">
+                                    <img src="assets/korzina-two.png" style="margin-top:6px;">
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -80,6 +208,181 @@
             <div class="block-sum">
                 <!-- ===== НЕ УДАЛЯТЬ =======-->
                 <div class="block-buy">
+                    <div class="block-input-buy" style="margin-bottom: 20px;">
+                        <div class="name-buy-product">
+                            <h5 class="number-clothing">EAT #1</h5>
+                        </div>
+                        <div class="summ-buy-product right">
+                            <div class="sum-product">
+                                <div style="font-weight: 900; margin-right: 5px;">$</div>
+                                <div style="color: #FF4646; font-weight:900;">
+                                 5 000 000
+                                </div>
+                             </div>
+                        </div>
+                        <div class="mines-button right">
+                            <h6 style="
+                                margin-top: -2px;
+                                font-weight: 900;
+                                font-size: 20px;
+                                cursor: pointer;
+                            ">-</h6>
+                        </div>
+                        <div class="number-buy-product right">
+                            1
+                        </div>
+                        <div class="plus-button right">
+                            <h6 style="
+                                cursor: pointer;
+                                margin-top: -1px;
+                                font-weight: 900;
+                                font-size: 20px;
+                            ">+</h6>
+                        </div>
+                        <div class="delete-buy-product right">
+                            <img src="assets/musor.png" style="cursor: pointer;">
+                        </div>
+                    </div>
+                    <div class="block-input-buy" style="margin-bottom: 20px;">
+                        <div class="name-buy-product">
+                            <h5 class="number-clothing">EAT #1</h5>
+                        </div>
+                        <div class="summ-buy-product right">
+                            <div class="sum-product">
+                                <div style="font-weight: 900; margin-right: 5px;">$</div>
+                                <div style="color: #FF4646; font-weight:900;">
+                                 5 000 000
+                                </div>
+                             </div>
+                        </div>
+                        <div class="mines-button right">
+                            <h6 style="
+                                margin-top: -2px;
+                                font-weight: 900;
+                                font-size: 20px;
+                                cursor: pointer;
+                            ">-</h6>
+                        </div>
+                        <div class="number-buy-product right">
+                            1
+                        </div>
+                        <div class="plus-button right">
+                            <h6 style="
+                                cursor: pointer;
+                                margin-top: -1px;
+                                font-weight: 900;
+                                font-size: 20px;
+                            ">+</h6>
+                        </div>
+                        <div class="delete-buy-product right">
+                            <img src="assets/musor.png" style="cursor: pointer;">
+                        </div>
+                    </div>
+                    <div class="block-input-buy" style="margin-bottom: 20px;">
+                        <div class="name-buy-product">
+                            <h5 class="number-clothing">EAT #1</h5>
+                        </div>
+                        <div class="summ-buy-product right">
+                            <div class="sum-product">
+                                <div style="font-weight: 900; margin-right: 5px;">$</div>
+                                <div style="color: #FF4646; font-weight:900;">
+                                 5 000 000
+                                </div>
+                             </div>
+                        </div>
+                        <div class="mines-button right">
+                            <h6 style="
+                                margin-top: -2px;
+                                font-weight: 900;
+                                font-size: 20px;
+                                cursor: pointer;
+                            ">-</h6>
+                        </div>
+                        <div class="number-buy-product right">
+                            1
+                        </div>
+                        <div class="plus-button right">
+                            <h6 style="
+                                cursor: pointer;
+                                margin-top: -1px;
+                                font-weight: 900;
+                                font-size: 20px;
+                            ">+</h6>
+                        </div>
+                        <div class="delete-buy-product right">
+                            <img src="assets/musor.png" style="cursor: pointer;">
+                        </div>
+                    </div>
+                    <div class="block-input-buy" style="margin-bottom: 20px;">
+                        <div class="name-buy-product">
+                            <h5 class="number-clothing">EAT #1</h5>
+                        </div>
+                        <div class="summ-buy-product right">
+                            <div class="sum-product">
+                                <div style="font-weight: 900; margin-right: 5px;">$</div>
+                                <div style="color: #FF4646; font-weight:900;">
+                                 5 000 000
+                                </div>
+                             </div>
+                        </div>
+                        <div class="mines-button right">
+                            <h6 style="
+                                margin-top: -2px;
+                                font-weight: 900;
+                                font-size: 20px;
+                                cursor: pointer;
+                            ">-</h6>
+                        </div>
+                        <div class="number-buy-product right">
+                            1
+                        </div>
+                        <div class="plus-button right">
+                            <h6 style="
+                                cursor: pointer;
+                                margin-top: -1px;
+                                font-weight: 900;
+                                font-size: 20px;
+                            ">+</h6>
+                        </div>
+                        <div class="delete-buy-product right">
+                            <img src="assets/musor.png" style="cursor: pointer;">
+                        </div>
+                    </div>
+                    <div class="block-input-buy" style="margin-bottom: 20px;">
+                        <div class="name-buy-product">
+                            <h5 class="number-clothing">EAT #1</h5>
+                        </div>
+                        <div class="summ-buy-product right">
+                            <div class="sum-product">
+                                <div style="font-weight: 900; margin-right: 5px;">$</div>
+                                <div style="color: #FF4646; font-weight:900;">
+                                 5 000 000
+                                </div>
+                             </div>
+                        </div>
+                        <div class="mines-button right">
+                            <h6 style="
+                                margin-top: -2px;
+                                font-weight: 900;
+                                font-size: 20px;
+                                cursor: pointer;
+                            ">-</h6>
+                        </div>
+                        <div class="number-buy-product right">
+                            1
+                        </div>
+                        <div class="plus-button right">
+                            <h6 style="
+                                cursor: pointer;
+                                margin-top: -1px;
+                                font-weight: 900;
+                                font-size: 20px;
+                            ">+</h6>
+                        </div>
+                        <div class="delete-buy-product right">
+                            <img src="assets/musor.png" style="cursor: pointer;">
+                        </div>
+                    </div>
                     <div class="block-input-buy" style="margin-bottom: 20px;">
                         <div class="name-buy-product">
                             <h5 class="number-clothing">EAT #1</h5>
